<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/app_name"
        android:textSize="70sp"
        android:textColor="#94B6D2" />

    <TextView
        android:id="@+id/faca_jogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/make_game"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faca_jogo"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbers"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/raffle"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate" />

    <LinearLayout
        android:id="@+id/generatenumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="DuplicateIds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/thirdNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:text="@string/placeholder" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fourthNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fifthNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:background="@drawable/edit_text"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>